# transmission_rpc

./: .gitignore  Cargo.toml  README.md
src/: error.rs  field.rs  lib.rs  priority.rs  request.rs  torrent.rs
src/requests/: add_torrent.rs  get_torrent.rs  mod.rs  torrent_action.rs  torrent_set.rs
src/responses/: add_torrent.rs  get_torrent.rs  mod.rs  torrent_action.rs
src/tests/: add_torrent.rs  dummy.torrent  get_torrent.rs  lib.rs  mod.rs  torrent_action.rs
src/types/: mod.rs  priority.rs  status.rs  time_t.rs
torrent_macro/: Cargo.toml
torrent_macro/src/: lib.rs
